2006-05-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Use common undodb
	methods; reset undo history.
	* src/GrampsDb/_GrampsInMemDB.py (load): Use common undodb
	methods; reset undo history.
	* src/GrampsDb/_GrampsXMLDB.py: Minor fix.
	* src/GrampsDb/_GrampsGEDDB.py: Minor fix.
	* src/GrampsDb/_GrampsDbBase.py: Undo history support.
	* src/UndoHistory.py: Fixes and additions.
	* src/ViewManager.py (post_load): Re-set undo/redo labels.

2006-05-06  Don Allingham  <don@gramps-project.org>
	* src/PluginUtils/_ReportUtils.py: fix set_nick_name
	* src/RelLib/_MediaRef.py: handle initialization of Ref object
	* src/DataViews/_PersonView.py: handle filter option correctly
	* src/DisplayTabs/_SourceEmbedList.py: fix icon
	* src/DisplayState.py: add relationship calculator option to statusbar

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_WebEmbedList.py: new icon

2006-05-05  Alex Roitman  <shura@gramps-project.org>
	* src/glade/gramps.glade: typo.
	* src/Editors/_EditSourceRef.py (_create_tabbed_pages): Add data
	and repository tabs.
	* src/GrampsDb/_GrampsDbBase.py (undo, redo): Add repository map
	to the tuple of tables.

2006-05-05  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py: handle edit of events
	* src/DisplayTabs/_NoteTab.py: stock_notes icon
	* src/DisplayTabs/_GrampsTab.py: handle named icons
	* src/glade/gramps.glade: hide date edit by default
	* src/DateEdit.py: ManagedWindow
	* src/Editors/_EditAddress.py: new DateEdit interface
	* src/Editors/_EditLdsOrd.py: new DateEdit interface
	* src/Editors/_EditSourceRef.py: new DateEdit interface
	* src/Editors/_EditEventRef.py: new DateEdit interface
	* src/Editors/_EditMedia.py: new DateEdit interface
	* src/Editors/_EditName.py: new DateEdit interface
	* src/Editors/_EditEvent.py: new DateEdit interface
	* src/GrampsWidgets.py: new DateEdit interface
	* src/Editors/_EditFamily.py: import ChildModel
